# gst-plugin-stt

./: Cargo.toml  README.md
src/: lib.rs
src/whisper/: imp.rs  mod.rs
