[package]
name = "gst-plugin-stt"
version = "0.1.0"
edition = "2021"
authors = ["Jan Marais <maraisjandre9@gmail.com>"]
description = "GStreamer Rust speech to text plugin"
repository = "https://github.com/jandremarais/gst-plugin-stt"

[dependencies]
anyhow = "1.0.90"
byte-slice-cast = "1.2.2"
gst = { version = "0.23.2", package = "gstreamer" }
gst-audio = { version = "0.23.2", package = "gstreamer-audio" }
gst-base = { version = "0.23.2", package = "gstreamer-base" }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.7", features = ["load-dynamic", "ndarray"] }
# ort = { version = "2.0.0-rc.2", features = ["download-binaries", "ndarray"] }


[lib]
name = "stt"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"
